# Ed-Fi-Actions

./: .editorconfig  .gitignore  CONTRIBUTORS.md  NOTICES.md  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: action.yml  after-pr.yml  after-pullrequest-bidi.yml  after-pullrequest-powershell.yml  after-pullrequest.yml  analyze-repository.yml  bidi-excludes.json  bidi-scanner-demo.yml  bidi-scanner.yml  codeql-analysis.yml  experiment-on-merge.yml  experiment-on-release.yml  experiment.yml  on-draft-release.yml  on-merge.yml  on-pr.yml  on-prerelease.yml  on-published-release.yml  on-pullrequest-bidi.yml  on-pullrequest-powershell.yml  on-pullrequest-reposcan.yml  on-release.yml  powershell-analyzer.yml  repository-scanner.yml  scan-actions-demo.yml  scorecard.yml
action-allowedlist/: Dockerfile  README.md  action.yml  approved.json  deprecated.json  entrypoint.sh  local.ps1  pyproject.toml  testing.md
action-allowedlist/action_allowedlist/: __main__.py  actions_parser.py  logging.psm1
action-allowedlist/dep/powershell-yaml/: Load-Assemblies.ps1  powershell-yaml.psd1  powershell-yaml.psm1
action-allowedlist/src/: Invoke-LocalScan.ps1  __main__.py  action-allowedlist.psm1  action-loader.psm1  actions_parser.py  allowed-action-analyzer.psm1  dependencies.ps1  dependencies.psm1  deprecated-action-analyzer.psm1  entrypoint.ps1  logging.psm1
bidi-scanner/: .prettierrc.yaml  README.md  action.yml  package.json
bidi-scanner/cli/: .eslintrc.yml  cli.mjs  (+6 more)
docs/: README.md
powershell-analyzer/: Dockerfile  README.md  action.yml  analyze.ps1
(+20 files in other folders)
