
[tool.poetry]
name = "action-allowedlist"
version = "0.1.0"
description = ""
authors = ["Christian Gonzalez"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-describe = "^2.0.1"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
